hello-ocp-operator/helloocp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: drb-hello
spec:
  selector:
    app: example-helloocp-3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
