hello-ocp-operator/helloocp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: helloocp-route
  namespace: drb-hello
spec:
  host: hello-ocp.apps.drb-449-10sept2.cp.fyre.ibm.com
  path: /hello-ocp
  port:
    targetPort: 8080
  to:
    kind: Service
    name: example
    weight: 100
  wildcardPolicy: None
